[DN] checkboxes panel